* Added complete instrumented test for OnBoarding flow
* Added plenty of Hilt Testing Module logic

* Added `surface` color to some composables

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.06.00"
 hiltVersion = "2.51.1"
-mockk = '1.13.7'
+mockk = '1.13.12'
 kotest = '5.7.2'
 
 
@@ -36,8 +36,11 @@ kotest-assertions-core-jvm = { module = "io.kotest:kotest-assertions-core-jvm", 
 kotest-assertions-json = { module = "io.kotest:kotest-assertions-json", version.ref = "kotest" }
 kotest-assertions-json-jvm = { module = "io.kotest:kotest-assertions-json-jvm", version.ref = "kotest" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
+mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
 
-
+hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hiltVersion"}
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltVersion" }
 
 
 [plugins]
