--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /local.properties
 /.idea/caches
 /.idea/libraries
+/.idea/other.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/other.xml.xml
@@ -14,3 +15,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+
