--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ navigationCompose = "2.8.5"
 coil = '2.2.2'
 datastore = '1.1.2'
 metamask = '0.6.6'
+runtimeLiveData = '1.7.8'
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -71,6 +72,7 @@ logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "lo
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 androidx-datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
+runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "runtimeLiveData" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
